# Hello-Kubernetes-sobre-AWS

./: .gitignore  Dockerfile  GUIA.md  README.md  pyproject.toml
k8s/: k8s_deployment_service.yaml  k8s_deployment_service.yml  k8s_ingress.yaml
src/: assembly.py  errors.py
src/domain/: __init__.py
src/domain/models/: operation.py
src/domain/use_cases/: __init__.py  base_use_case.py  calculate_use_case.py
src/entrypoints/: __init__.py
src/entrypoints/api/: main.py
terraform/environments/student/eks/: backend.tfvars  terraform.tfvars
terraform/environments/student/networking/: backend.tfvars  terraform.tfvars
terraform/modules/eks/: locals.tf  main.tf  variables.tf
terraform/modules/vpc/: main.tf  outputs.tf  variables.tf
terraform/stacks/eks/: .plan  config.tf  main.tf  outputs.tf  variables.tf
terraform/stacks/networking/: .plan  main.tf  outputs.tf  variables.tf
